# ragway

./: .coverage  .gitignore  CLAUDE.md  README.md  archiecture.md  coverage.json  pyproject.toml  rag.yaml  user_value.md
benchmarks/: __init__.py  dataset_loader.py  question_generator.py  rag_eval_dataset.py  synthetic_dataset_generator.py
chroma_data/: chroma.sqlite3
cli/: rag_cli.py
cli/commands/: benchmark.py  evaluate.py  query.py
configs/: agentic_groq.yaml  default.yaml  fast_local.yaml  fully_local.yaml  high_quality.yaml  long_doc.yaml  pinecone_openai.yaml  weaviate_mistral.yaml
docs-site/: next.config.js  package-lock.json  package.json  theme.config.tsx  tsconfig.json
docs-site/.next/: build-manifest.json  trace
docs-site/pages/: _app.tsx  index.tsx
docs-site/styles/: globals.css
instructions/: copilot-instructions.instructions.md
pipelines/: agentic_rag_pipeline.py  hybrid_rag_pipeline.py  long_context_rag_pipeline.py  naive_rag_pipeline.py  self_rag_pipeline.py
ragway/: __init__.py  exceptions.py  rag.py  raglab.py  validators.py
ragway/caching/: embedding_cache.py  llm_cache.py  retrieval_cache.py
ragway/chunking/: base_chunker.py  fixed_chunker.py  hierarchical_chunker.py  recursive_chunker.py  semantic_chunker.py  sliding_window_chunker.py
ragway/cli/: __init__.py  rag_cli.py
ragway/components/: citation_builder.py  context_compression.py  guardrails.py  hallucination_detector.py  memory_module.py  query_expansion.py
ragway/core/: component_registry.py  config_loader.py  dependency_container.py  pipeline_builder.py  pipeline_runner.py  rag_engine.py  rag_pipeline.py
ragway/embeddings/: base_embedding.py  bge_embedding.py  cohere_embedding.py  instructor_embedding.py  openai_embedding.py  sentence_transformer_embedding.py
ragway/evaluation/: answer_accuracy.py  context_precision.py  context_recall.py  faithfulness.py  hallucination_score.py  latency_eval.py  ragas_eval.py
ragway/generation/: anthropic_llm.py  base_llm.py  (+9 more)
studio/: experiment_dashboard.py  pipeline_visualizer.py  rag_debugger.py
(+217 files in other folders)
